--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,14 @@
 {
-	"name": "standard-app",
-	"authors": ["AlexPlex <atellmer@gmail.com>"],
-	"description": "Standard App",
-	"main": "gulpfile.js",
-	"license": "MIT",
-	"homepage": "",
-	"dependencies": {
-		"bootstrap": "~3.3.6"
-	}
+  "name": "standard-app",
+  "authors": [
+    "AlexPlex <atellmer@gmail.com>"
+  ],
+  "description": "Standard App",
+  "main": "gulpfile.js",
+  "license": "MIT",
+  "homepage": "",
+  "dependencies": {
+    "bootstrap": "~3.3.6",
+    "bootstrap-select": "^1.10.0"
+  }
 }
