--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
-  "name": "standard-app",
-  "authors": [
+	"name": "standard-app",
+	"authors": [
     "AlexPlex <atellmer@gmail.com>"
   ],
-  "description": "Standard App",
-  "main": "gulpfile.js",
-  "license": "MIT",
-  "homepage": "",
-  "dependencies": {
-    "bootstrap": "~3.3.6",
-    "bootstrap-select": "^1.10.0"
-  }
+	"description": "Standard App",
+	"main": "gulpfile.js",
+	"license": "MIT",
+	"homepage": "",
+	"dependencies": {
+		"bootstrap": "~3.3.6",
+		"bootstrap-select": "^1.10.0",
+		"hammerjs": "hammer.js#^2.0.6"
+	}
 }
